deploy(vercel): Fix configurations for serverless environment

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "lesechos-frontend-express",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/server.cjs",
     "watch": "npm-run-all --parallel watch:*",
-    "watch:server": "nodemon --watch dist --exec node dist/server.js",
+    "watch:server": "nodemon --watch dist --exec node dist/server.cjs",
     "watch:build-server": "webpack --config webpack/dev/webpack.dev.server.cjs --watch",
     "watch:build-client": "webpack --config  webpack/dev/webpack.dev.client.cjs --watch --no-cache",
-    "build:prod": "rm -rf ./dist && webpack --config webpack/prod/webpack.prod.server.cjs --config webpack/prod/webpack.prod.client.cjs",
+    "build:prod": "rm -rf ./dist && rm -rf ./api && webpack --config webpack/prod/webpack.prod.client.cjs && webpack --config webpack/prod/webpack.prod.server.cjs",
     "build:dev": "rm -rf ./dist && webpack --config webpack/dev/webpack.dev.server.cjs --config webpack/dev/webpack.dev.client.cjs"
   },
   "eslintConfig": {
